# ai_video_transcriber

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  TROUBLESHOOTING.md
src/: __init__.py  main.py  requirements.txt  test_summary.py
src/application/transcription/services/: llm_markdown_service.py  transcription_service.py  video_downloader_service.py
src/config/: env_service.py
src/infrastructure/inbound/console/adapters/: console_user_input_adapter.py
src/infrastructure/inbound/console/ports/: user_input_port.py
src/infrastructure/outbound/agents/adapters/: summarizer_lmstudio_agent.py  summarizer_ollama_agent.py
src/infrastructure/outbound/agents/ports/: summarizer_agent.py
src/infrastructure/outbound/file_storage/adapters/: local_file_storage.py
src/infrastructure/outbound/file_storage/ports/: file_storage_port.py
src/infrastructure/outbound/transcriber/adapters/: faster_whisper_audio_transcriber.py  openai_whisper_audio_transcriber.py
src/infrastructure/outbound/transcriber/ports/: audio_transcriber_port.py
src/infrastructure/outbound/video_downloader/adapters/: video_downloader.py
src/infrastructure/outbound/video_downloader/ports/: video_downloader_port.py
